tests/ui/target-feature/gate.stderr
error[E0658]: the target feature `avx512bw` is currently unstable
  --> $DIR/gate.rs:25:18
   |
LL | #[target_feature(enable = "avx512bw")]
   |                  ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44839 <https://github.com/rust-lang/rust/issues/44839> for more information
   = help: add `#![feature(avx512_target_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
